--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Pullses Chat",
-	"name": "Pullses Chat",
+	"short_name": "Atendechat",
+	"name": "Atendechat",
 	"icons": [
 		{
 			"src": "favicon.ico",
